--- a/src/less/blocks/top-banner.less
+++ b/src/less/blocks/top-banner.less
@@ -131,7 +131,7 @@
 		border-radius: 5px;
 		// background-color: #fff;
 		background-color: #c8e3bb;
-		background-image: linear-gradient(45deg, #a1de5f, transparent);
+		background-image: linear-gradient(45deg, #a1de5f, rgba(255,255,255,0));
 		box-shadow: 0px 0px 7px 4px #fff2e9;
 	}
 }
@@ -156,7 +156,7 @@
 		text-align: center;
 		padding: 18px 0;
 		background-color: #c8e3bb;
-		background-image: linear-gradient(45deg, #a1de5f, transparent);
+		background-image: linear-gradient(45deg, #a1de5f, rgba(255,255,255,0));
 		margin-bottom: 63px;
 		box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5), inset -2px -2px 5px rgba(154, 147, 140, 0.5);
 	}
