finished setting for webpack

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,6 +1,6 @@
-@import "./scaffolding.less";
 @import "./variables.less";
 @import "./mixins.less";
+@import "./scaffolding.less";
 @import "./fonts.less";
 
 @import "./blocks/top-banner.less";
@@ -26,11 +26,11 @@
 @import "blocks/price.less";
 
 
-// @import "blocks/modal-callback.less";
-// @import "blocks/rs-slider.less";
-// @import "animation.less";
-// @import "blocks/welcome.less";
-// @import "blocks/top.less";
-// @import "blocks/main-menu.less";
+@import "blocks/modal-callback.less";
+@import "blocks/rs-slider.less";
+@import "animation.less";
+@import "blocks/welcome.less";
+@import "blocks/top.less";
+@import "blocks/main-menu.less";
 
-// @import "blocks/teacher-detail.less";
+@import "blocks/teacher-detail.less";
