--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -42,6 +42,7 @@ main {
 .main-layout {
     position: relative;
     overflow: hidden;
+    background-color: rgba(255,255,255,0.7);
 }
 
 .layout {
