--- a/src/less/blocks/btn.less
+++ b/src/less/blocks/btn.less
@@ -49,7 +49,7 @@
 	font-family: 'Lora', serif;
 	background-color: @pink;
 	display: inline-block;
-	padding: 6px 20px;
+	padding: 10px 20px;
 	color: #fff;
 	font-style: italic;
 	position: relative;
@@ -62,6 +62,8 @@
 	// animation-duration: 15s; 
 	// animation-iteration-count: infinite;
 	// transform:  rotate3d(-1, -1, -1, 5deg); 
+
+	box-shadow: -2px 18px 20px 0px rgba(249, 62, 158, 0.5);
 	
 	&::before,
 	&::after {
