--- a/src/less/blocks/directions.less
+++ b/src/less/blocks/directions.less
@@ -29,6 +29,9 @@
     margin-right: 20px;
     display: inline-block;
 }
+.directions__more-btn--mobile {
+    display: none;
+}
 
 .directions__item {
     background-color: #fff;
@@ -116,5 +119,14 @@
 
     .directions__item {
         max-width: 25%;
+    }
+}
+
+@media @mobile-widths-only {
+    .directions__more-btn {
+        display: none;
+    }
+    .directions__more-btn--mobile {
+        display: inline-block;
     }
 }
