changed paddings on the main page

--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -15,7 +15,7 @@ body {
 }
 
 section {
-    padding: 20px 20px;
+    padding: 16px 16px 0;
 }
 
 ul {
@@ -27,6 +27,8 @@ ul {
 a {
     text-decoration: none;
 }
+
+
 
 main {
     min-height: ~"calc(100vh - 290px)";
@@ -62,6 +64,12 @@ main {
 
 .ReactModal__Overlay {
     z-index: 2;
+}
+
+@media @tablet-widths {
+    p {
+        font-size: 20px;
+    }
 }
 
 @media @desktop-widths {
