--- a/src/less/style.less
+++ b/src/less/style.less
@@ -20,6 +20,7 @@
 @import "blocks/reviews.less";
 
 @import "blocks/mobile-menu.less";
+@import "blocks/advantages.less";
 @import "blocks/advanture.less";
 @import "blocks/send.less";
 @import "blocks/policy.less";
