Change font size and paddings

--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -21,12 +21,12 @@
 
 .container-fluid() {
     width: auto;
+    padding: 40px 16px 16px 16px;
 
     @media @tablet-widths {
         width: 84%; /*640px / 768px ~= 84%*/
         max-width: 1200px; /*960px / .84 ~= 1142 (Центровка начнётся чуть раньше 1200px) */
         margin: 0 auto;
-        padding: 0;
     }
 }
 
