--- a/src/less/blocks/contacts.less
+++ b/src/less/blocks/contacts.less
@@ -1,5 +1,4 @@
 .contacts {
-    font-size: 20px;
     line-height: 25px;
 
     & a {
@@ -16,20 +15,15 @@
 }
 
 .contacts__item {
-    margin-bottom: 10px;
+    margin-top: 0px;
 }
 
 .contacts__block {
     margin-bottom: 35px;
-
     max-width: 100%;
-    
-    font-size: 22px;
     color: @blue;
-
     background-color: #fff;
     z-index: 1;
-    // padding: 20px;
     border-radius: 6px;
 }
 
@@ -53,7 +47,6 @@
         border: 1px solid #a3a3a3;
         padding: 10px;
         outline: none;
-        font-size: 20px;
         margin-bottom: 20px;
     }
 }
