--- a/src/less/blocks/mobile-menu.less
+++ b/src/less/blocks/mobile-menu.less
@@ -11,6 +11,7 @@
 .mobile-menu {	
 	position: fixed;
 	background-color: rgba(254, 23, 191, 0.85);
+	padding: 20px;
 	width: 232px;
 	min-height: 100%;
 	top: 0;
