--- a/src/less/blocks/top-banner.less
+++ b/src/less/blocks/top-banner.less
@@ -1,8 +1,3 @@
-.top-banner {
-	background-image: url('/images/top/roma-top.jpg');
-	background-size: cover;
-	background-position: center bottom;
-}
 .top--hide {
 	& .top-banner,
 	& .top-banner__wrapper {
@@ -12,7 +7,10 @@
 }
 .top-banner__wrapper {
 	transition: height 1s;
-	height: 500px;
+
+	&.container {
+		padding: 0 16px 32px;
+	}
 }
 .top-banner__title {
 	font-family: "BigSoftie", sans-serif;
@@ -69,7 +67,7 @@
 }
 .top-banner__discount {
 	font-weight: medium;
-	font-size: 17px;
+	font-size: 15px;
 	color: #4f4f4f;
 
 	& span {
@@ -84,7 +82,6 @@
 	max-width: 60%;
 	flex-wrap: wrap;
 	font-weight: medium;
-	font-size: 20px;
 	margin-left: 150px;
 }
 .top-banner__contacts-item {
@@ -129,26 +126,21 @@
 	.top-banner__info {
 		padding: 15px 15px;
 		border-radius: 5px;
-		// background-color: #fff;
 		background-color: #c8e3bb;
 		background-image: linear-gradient(45deg, #a1de5f, rgba(255,255,255,0));
-		box-shadow: 0px 0px 7px 4px #fff2e9;
 	}
 }
 @media @tablet-widths {
+	.top-banner {
+		background-image: url('/images/top/roma-top.jpg');
+		background-size: cover;
+		background-position: center bottom;
+	}
 	.top-banner__wrapper {
 		height: 800px;
 		height: 720px;
 	}
 	.top-banner__info {
-		// padding: 60px 0;
-		// padding-left: 110px;
-	    // max-width: 800px;
-		// width: 80%;
-		// background-image: url(/images/top/elipse.svg);
-		// background-size: cover;
-		// background-repeat: no-repeat;
-
 		max-width: 800px;
 		width: 80%;
 		background-size: cover;
@@ -165,7 +157,7 @@
 		margin-top: 0;
 	}
 	.top-banner__btn {
-		font-size: 18px;
+		font-size: 16px;
 	}
 	.top-banner__block {
 		text-align: right;
