--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -15,7 +15,7 @@ body {
 }
 
 section {
-    padding: 16px 16px 0;
+    // padding: 16px 16px 0;
 }
 
 ul {
@@ -32,7 +32,7 @@ a {
 
 main {
     min-height: ~"calc(100vh - 290px)";
-    margin-bottom: 40px;
+    margin-bottom: 16px;
 }
 
 .all-title {
@@ -69,11 +69,5 @@ main {
 @media @tablet-widths {
     p {
         font-size: 20px;
-    }
-}
-
-@media @desktop-widths {
-    section {
-        padding: 20px 0;
     }
 }
