Changed header logo

--- a/src/less/blocks/top-banner.less
+++ b/src/less/blocks/top-banner.less
@@ -7,10 +7,6 @@
 }
 .top-banner__wrapper {
 	transition: height 1s;
-
-	&.container {
-		padding: 0 16px 32px;
-	}
 }
 .top-banner__title {
 	font-family: "BigSoftie", sans-serif;
@@ -185,5 +181,11 @@
 	}
 	.top-banner__contacts-list {
 		display: flex;
-	}	
+	}
+	.top-banner__wrapper {
+
+		&.container {
+			padding: 0 16px 32px;
+		}
+	}
 }
